# advent2018

./: .gitignore
clojure/: CHANGELOG.md  project.clj
clojure/src/: common.clj
clojure/src/advent/: day1.clj  day2.clj  day3.clj  day4.clj  day5.clj
haskell/: Parser.hs  README.md  aoc1a.hs  aoc1b.hs  aoc2a.hs  aoc2b.hs  aoc3a.hs  aoc4a.hs  haskell.cabal  main.hs
