name:                haskell
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/adicirstei/advent2018#readme
license:             BSD3
author:              Author name here
maintainer:          example@example.com
copyright:           2018 
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable aoc
  hs-source-dirs:      .
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                    ,   containers

  other-modules: AOC1A
              ,  AOC1B 
              ,  AOC2A
              ,  AOC2B
              ,  AOC3A
